--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="https://github.com/Rodolfo-bps/Mi-Pagina-Web">Mi Pagina Web</a></h4>
+            <h4><a href="https://github.com/Rodolfo-bps/Mi-Pagina-Web" target="blank">Mi Pagina Web</a></h4>
             <p>Una pequeña pagina web creada con HTML y CSS</p>
           </div>
         </div>
